'mixi_client_add'

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,4 @@
-<div id="connect_button">
+<div id="message">
 Only 2 steps!<br>
 <br>
 First Step. This <a href="/connect">TwitterPage</a> open and click "Allow"!<br>
