--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Twitter2mixi Application</title>
-    <link href="/main.css" media="screen" rel="Stylesheet" type="text/css" />
+    <link href="/css/main.css" media="screen" rel="Stylesheet" type="text/css" />
 </head>
 
 <body>
