--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,9 +1,15 @@
-<div id="connect_button">
+<div id="message">
 Only 2 steps!<br>
 <br>
-First Step. This <a href="/connect">TwitterPage</a> open and click "Allow"!<br>
+Second Step. <br>
 <br>
-<a href="/connect">Step 1, Please Push "Allow" at Twitter page.</a>
+Please tell me This Mixi account.<br>
+<br>
+<form method="post" action="/signup">
+Email:<input type="text" name="mixi_email" /><br>
+Password:<input type="text" name="mixi_password" /><br>
+<input type="submit" value="submit" />
+</form>
 </div>
 <h2>About</h2>
 <p>
