--- a/views/home.erb
+++ b/views/home.erb
@@ -1,16 +1,25 @@
-<div id="message">
-Only 2 steps!<br>
-<br>
-First Step. This <a href="/connect">TwitterPage</a> open and click "Allow"!<br>
-<br>
-<a href="/connect">Step 1, Please Push "Allow" at Twitter page.</a>
-</div>
-<h2>About</h2>
+<center>
 <p>
-    This twitter2mixi is that Your Twitter status write Your <a href='http://mixi.jp/recent_echo.pl' target='_blank'>mixi echo</a>! Twitter status write so mixi echo auto post.
+<big>
+お手軽登録！ あなたのTwitterをMixiエコーに自動送信します。(無料)<br>
+</big>
+</p>
+<br>
+<img src='/images/twitter_allow.jpg'>
+</center>
+<div id="message">
+あなたの、Twitterで、「Allow」のボタンをクリックして下さい。<br>
+<br>
+</div>
+<center>
+<h1><a href="/connect">登録はこちらから。(無料)</a></h1>
+</center>
+<h2>このアプリは何？</h2>
+<p>
+  Twitterしたつぶやきを、Mixiエコーに自動送信するサービスです。<br>
 </p>
 
-<h2>Author</h2>
+<h2>作者</h2>
 <p>
     <a href='http://cyberwave.jp/nashiki/'  target='_blank'>nashiki shigeyuki</a>
 </p>
