--- a/views/success.erb
+++ b/views/success.erb
@@ -1,14 +1,4 @@
 <div id="message">
-Success!<br>
-<br>
-<br>
+無地に登録完了しました。
 </div>
-<h2>About</h2>
-<p>
-    This twitter2mixi is that Your Twitter status write Your <a href='http://mixi.jp/recent_echo.pl' target='_blank'>mixi echo</a>! Twitter status write so mixi echo auto post.
-</p>
-
-<h2>Author</h2>
-<p>
-    <a href='http://cyberwave.jp/nashiki/'  target='_blank'>nashiki shigeyuki</a>
-</p>
+Mixiアカウントを変更した時は、再度このページでアカウント情報の変更をして下さい。
