--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
       <% if @user %>
           <a href='/disconnect'>Logout</a>
       <% else %>
-          <a href='/connect'>Login</a>
+          <!--a href='/connect'>Login</a-->
       <% end %>
     </p>
   </div>
