--- a/views/uc.erb
+++ b/views/uc.erb
@@ -1,44 +1,9 @@
 <center>
 <p>
-<h2>
-ごめんなさ、まだ調整中です！
-</h2>
+<h1>
+ごめんなさい、まだ調整中です！
+</h1>
 </p>
 </center>
 <br>
-
-<h2>このアプリの最新情報は？</h2>
-<p>
-  私たちのTwitterアカウントをフォローしてね。<br>
-  <div id="twitter_div">
-  <ul id="twitter_update_list"></ul>
-  <a href="http://twitter.com/twit2mixi" id="twitter-link" style="display:block;text-align:right;">follow me on Twitter</a>
-  </div>
-  <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-  <script type="text/javascript" src="http://twitter.com/statuses/user_timeline/twit2mixi.json?callback=twitterCallback2&amp;count=5"></script>
-</p>
-
-<h2>twitter2mixiプロジェクト求人中！</h2>
-<p>
-  一緒に、twitter2mixiを盛り上げませんか？<br>
-  オープンソースプロジェクトなので報酬はありませんが、ユーザが使ってくれて喜んでくれるが何よりも『やりがい』です！<br>
-  ユーザからのありがたいお言葉を早く実現化したい！<br>
-  そのためには多くの人がこのプロジェクトにかかわってくれることを望んでいます。<br>
-  一人ひとりの力を合わせて、もっとtwitter2mixiを盛り上げたいです！<br>
-  <div  style="display:block;text-align:right;">twitter2mixiプロジェクト 代表 梨木繁幸</div><br>
-  下記のような人で、ご連絡をお待ちしております。
-  <ul>
-  <li>Rubyプログラマ(最新技術で一緒にトライ！)</li>
-  <li>WEBデザイナー (あなたのセンスで、このサイト直したい;;)</li>
-  <li>応援団 (Twitter上でこのサイトの事RTしてくれるとうれしいな。。)</li>
-  </ul>
-  「梨木を読む」の中の<a href='http://cyberwave.jp/nashiki/%E3%83%A9%E3%82%A4%E3%83%95%E3%83%8F%E3%83%83%E3%82%AB%E3%83%BC%E6%80%A5%E5%8B%9F/' target='_blank'>このページ</a>からエントリーしてね。。<br>
-  メッセージ本文のところに「twitter2mixiプロジェクト参加希望」とあなたがこのプロジェクトへ貢献できることを書いてくださいね。<br>
-</p>
-
-<br>
-<h2>作者</h2>
-<p>
-    <a href='http://cyberwave.jp/nashiki/' target='_blank'>nashiki shigeyuki</a> on <a href="http://twitter.com/nashiki" target='_blank'>twitter</a><br>
-    <a href='http://www.0r2.info/blog/' target='_blank'>masayun</a> on <a href="http://twitter.com/masayukig" target='_blank'>twitter</a><br>
-</p>
+<%= partial :ad %>
