--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,17 +20,17 @@
   
   <div id="nav" style="float:right">
     <p>
-      <% if @user %>
+      <% if @login_flg %>
           <a href='/disconnect'>Logout</a>
       <% else %>
-          <!--a href='/connect'>Login</a-->
+          <a href='/connect'>Login</a>
       <% end %>
     </p>
   </div>
   <br clear="all"/>
-  
+
   <%= yield %>
-  
+
   <div id="footer" align="center">
     <br/>
     <small>
