debug mixi client update

--- a/views/home.erb
+++ b/views/home.erb
@@ -13,11 +13,23 @@
 <br>
 </div>
 <center>
+<a href="/connect">私は下記利用規約に同意してこのサービスを利用します。</a>
 <h1><a href="/connect">登録はこちらから。(無料)</a></h1>
 </center>
 <h2>このアプリは何？</h2>
 <p>
   Twitterしたつぶやきを、Mixiエコーに自動送信するサービスです。<br>
+</p>
+<h2>利用規約</h2>
+<p>
+  このサービスはまだ始まったばかりのアルファ版の状態です。<br>
+  公式につぶやき書き込みのAPIが用意されていないMixiサイトとの連携を行うサービスですので安定稼動するまで少しお時間を下さい。<br>
+  また、このサービスを利用するユーザに対して何らかの損害が発生しても一切の責任を負いかねます。<br>
+  Mixi側でこのサービスの接続を拒否し連携が出来なくなるかもしれません。<br>
+  ユーザがご登録を頂く、Twitterの承認情報や、Mixiのアカウント情報などはユーザに許可無く削除をする時もあると思います。<br>
+  その時は、私たちの<a href="http://twitter.com/twit2mixi" target="_blank">Twitter</a>で告知しますので、再度このページでTwitterとMixiの登録手続きをお願いします。<br>
+  <br>
+  その上でもよろしければ、アカウント登録をお願いいたします。
 </p>
 <br>
 <%= partial :ad %>
