--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
 <div id="content">
   <div id="header">
     <div>
-      <h1><a href='/'>Twitter2Mixi</a></h1>
+      <h1><a href='/'>Twitter2Mixi</a> <font size=2 color='#a0a0a0'>ver alfa</font></h1>
       <small>TwitterしたらMixiエコーに自動送信!!</small>
     </div>
     <br clear="all"/>
