--- a/views/home.erb
+++ b/views/home.erb
@@ -26,7 +26,8 @@
   公式につぶやき書き込みのAPIが用意されていないMixiサイトとの連携を行うサービスですので安定稼動するまで少しお時間を下さい。<br>
   また、このサービスを利用するユーザに対して何らかの損害が発生しても一切の責任を負いかねます。<br>
   Mixi側でこのサービスの接続を拒否し連携が出来なくなるかもしれません。<br>
-  ユーザがご登録を頂く、Twitterの承認情報や、Mixiのアカウント情報などはユーザに許可無く削除をする時もあると思います。<br>
+  ユーザがご登録を頂く、Twitterの承認情報や、Mixiのアカウント情報などはユーザに許可無く削除をする事もあります。<br>
+  複数のTwitterアカウントを、1つのMixiエコーに転送することは出来ません。<br>
   その時は、私たちの<a href="http://twitter.com/twit2mixi" target="_blank">Twitter</a>で告知しますので、再度このページでTwitterとMixiの登録手続きをお願いします。<br>
   <br>
   その上でもよろしければ、アカウント登録をお願いいたします。
