--- a/views/success.erb
+++ b/views/success.erb
@@ -1,5 +1,7 @@
 <center>
-<h1>無事に登録完了しました。</h1>
+<div class="message thank-message">
+	<p><strong>無事に登録完了しました。</strong></p>
+</div>
 <br>
 TwitterからMixiエコーに転送されるまで今しばらくお待ち下さい。<br>
 <br>
