--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,8 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Twitter2mixi | TwitterしたらMixiエコーに自動送信!! </title>
-  <link href="/css/style.css" media="all" rel="Stylesheet" type="text/css" />
+  <link href="css/style.css" media="all" rel="Stylesheet" type="text/css" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
@@ -9,38 +10,32 @@
 <%= session[:access_token] if @debug_flg %>
 <%= '<br>' if @debug_flg %>
 <%= session[:secret_token] if @debug_flg %>
-<div id="header">
-    <div>
-        <h1><a href='/'>Twitter2Mixi</a>
-            <font size=2 color='#a0a0a0'>
-                ver alfa
-            </font>
-            <font size=3 class="white">
-                TwitterしたらMixiエコーに自動送信!! 現在：<%= @user_dao.get_all_count %>人が利用中!
-            </font>
-        </h1>
-        <h2 class="white">
-            
-        </h2>
+<div id="shell">
+    <div id="header">
+            <h1><a href='/'>Twitter2Mixi</a></h1>
+                <font size=2 color='#a0a0a0'>
+                    ver alfa
+                </font>
+                <div class="right">
+                    TwitterしたらMixiエコーに自動送信!! 現在：<%= @user_dao.get_all_count %>人が利用中!
+                </div>
     </div>
-    <br clear="all"/>
-    <div class="shell">
-        <div id="head">
-            <div class="right">
-                <p>
+
+    <div id="navigation">
+                <ul>
                     <% if @login_flg %>
-                    <a href='/signup'>Mixiアカウント設定</a>
-                    | <a href='/unregist'>退会</a>
-                    | <a href='/disconnect'>ログアウト</a>
+                    <li><a href='/signup'><span>Mixiアカウント設定</span></a></li>
+                    <div class="right">
+                      <li><a href='/unregist'><span>退会</span></a></li>
+                      <li><a href='/disconnect'><span>ログアウト</span></a></li>
+                    </div>
                     <% else %>
-                    <a href='/connect'>ログイン(新規登録)</a>
+                    <li><a href='/connect'><span>ログイン(新規登録)</span></a></li>
                     <% end %>
-                </p>
-            </div>
-        </div>
+                </ul>
     </div>
-</div>
-  <div id="content" class="shell">
+
+  <div id="content">
   
 
   <br clear="all"/>
@@ -50,7 +45,7 @@
   <div id="footer" align="center">
     <br/>
     <small>
-      copyright <a href='http://cyberwave.jp/nashiki/' target='_blank'>cyberwave.jp</a>
+      &copy; <a href='http://cyberwave.jp/nashiki/' target='_blank'>cyberwave.jp</a>
     </small>
     <br/>
     <small>
