add setting page for twitter url echo control.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,6 +25,7 @@
                 <ul>
                     <% if @login_flg %>
                     <li><a href='/signup'><span>Mixiアカウント設定</span></a></li>
+                    <li><a href='/setting'><span>各種設定</span></a></li>
                     <div class="right">
                       <li><a href='/unregist'><span>退会</span></a></li>
                       <li><a href='/disconnect'><span>ログアウト</span></a></li>
