add the function twitter2haiku
add several files for twitter2hatena_haiku function.

there are many TODOs..

 o Error proccess.
 o setting screen layout.
 o Error and Thank message control.
 o and so on....

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,7 @@ h6 { font-size:12px; line-height:16px; padding-bottom:5px; }
 #content li{ padding-bottom:3px; }
 #content a { text-decoration: underline;}
 #content a:hover { text-decoration: none;}
+#content label { display: block; margin-bottom: 5px; padding-left: 3px; }
 
 #footer { text-align: center; font-size:11px; padding:10px 0 20px 0; color:#9d5b00; }
 #footer a{ color:#563609; }
