add gcal's explanation

--- a/views/setting.erb
+++ b/views/setting.erb
@@ -31,6 +31,9 @@
         <input type="password" size="20" name="hatena_haiku_password" value="<%= params[:hatena_haiku_password] %>" />
 
 <hr />
+      <h2><a href="/">Google Calendar</a>設定</h2>
+        Twitterのつぶやきを、Google Calendarへ書き込みます。<br />
+        ハッシュタグ「#gcal」をつけて、つぶやいてください。<br />
         <label>Google Calendarのメールアドレス</label>
         <input type="text" size="20" name="gcal_mail" value="<%= params[:gcal_mail] %>" />
         <label>Google Calendarのパスワード</label>
