--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
   <div id="header">
     <div>
       <h1><a href='/'>Twitter2Mixi</a> <font size=2 color='#a0a0a0'>ver alfa</font></h1>
-      <small>TwitterしたらMixiエコーに自動送信!! 現在：<%= @user_dao.get_all_count %>人が利用中!</small>
+      <small>TwitterしたらMixiエコーに自動送信!!</small>
     </div>
     <br clear="all"/>
   </div>
