--- a/views/home.erb
+++ b/views/home.erb
@@ -1,36 +1,44 @@
 <center>
-<p>
-<big>お手軽登録！</big>
-<h1>
-あなたのTwitterをMixiエコーに自動送信します。(無料)<br>
-</h1>
-</p>
-<br>
-<a href="/connect"><img src='/images/twitter_allow.jpg'></a>
+  <div class="message thank-message">
+  お手軽登録！<h1>あなたのTwitterをMixiエコーに自動送信します。(無料)<br></h1>
+  </div>
+  <br>
+  <a href="/connect"><img src='/images/twitter_allow.jpg' width='500'></a><br>
+  <br>
+  あなたの、Twitterで、「Allow」のボタンをクリックして下さい。<br>
 </center>
-<div id="message">
-あなたの、Twitterで、「Allow」のボタンをクリックして下さい。<br>
-<br>
+
+<div class="message thank-message">
+  <a href="/connect">私は下記利用規約に同意してこのサービスを利用します。</a>
+  <h1><a href="/connect">登録はこちらから。(無料)</a></h1>
 </div>
-<center>
-<a href="/connect">私は下記利用規約に同意してこのサービスを利用します。</a>
-<h1><a href="/connect">登録はこちらから。(無料)</a></h1>
-</center>
-<h2>このアプリは何？</h2>
+
+<a name="whats"></a>
+<h2 class="orange">twitter2mixiって？</h2>
 <p>
-  Twitterしたつぶやきを、Mixiエコーに自動送信するサービスです。<br>
+  Twitterのつぶやきを、Mixiボイスに自動送信するサービスです。<br>
+  <div align='right'><a href='#top'>TOPへ戻る</a></div>
 </p>
-<h2>利用規約</h2>
+
+<a name="faq"></a>
+<h2 class="orange">よくある質問</h2>
 <p>
-  このサービスはまだ始まったばかりのアルファ版の状態です。<br>
-  公式につぶやき書き込みのAPIが用意されていないMixiサイトとの連携を行うサービスですので安定稼動するまで少しお時間を下さい。<br>
-  また、このサービスを利用するユーザに対して何らかの損害が発生しても一切の責任を負いかねます。<br>
-  Mixi側でこのサービスの接続を拒否し連携が出来なくなるかもしれません。<br>
-  ユーザがご登録を頂く、Twitterの承認情報や、Mixiのアカウント情報などはユーザに許可無く削除をする事もあります。<br>
+  Q、退会したいのですがどうしたらいいのですか？<br>
+  A、一度ログイン後、画面上部メニューの「退会」から退会手続きを行って下さい。<br>
+  <div align='right'><a href='#top'>TOPへ戻る</a></div>
+</p>
+
+<a name="kiyaku"></a>
+<h2 class="orange">利用規約</h2>
+<p>
+  このサービスは、アルファ版です。<br>
+  Mixiは、公式に「つぶやき書き込み」APIが用意されていないので突然サービスが中止されるかもしれません。<br>
+  このサービスを利用するユーザに対して何らかの損害が発生しても一切の責任を負いかねます。<br>
   複数のTwitterアカウントを、1つのMixiエコーに転送することは出来ません。<br>
-  その時は、私たちの<a href="http://twitter.com/twit2mixi" target="_blank">Twitter</a>で告知しますので、再度このページでTwitterとMixiの登録手続きをお願いします。<br>
+  ユーザがご登録を頂く、Twitterの承認情報や、Mixiのアカウント情報などはユーザに許可無く削除をするがあります。<br>
   <br>
   その上でもよろしければ、アカウント登録をお願いいたします。
+  <div align='right'><a href='#top'>TOPへ戻る</a></div>
 </p>
-<br>
+
 <%= partial :ad %>
