--- a/views/success.erb
+++ b/views/success.erb
@@ -1,8 +1,12 @@
 <center>
-<h1>無事に登録完了しました。</h1>
+<div class="message thank-message">
+<p><strong>無事に登録完了しました。</strong></p>
+</div>
 <br>
 TwitterからMixiエコーに転送されるまで今しばらくお待ち下さい。<br>
 <br>
 Mixiアカウントを変更した時は、再度このページでアカウント情報の変更をして下さい。<br>
 </center>
+<br>
+<br>
 <%= partial :ad %>
