--- a/views/unregist_success.erb
+++ b/views/unregist_success.erb
@@ -1,6 +1,8 @@
 
 <center>
-<h1>無事に登録解除完了しました。</h1>
+<div class="message error-message">
+<p><strong>無事に登録解除完了しました。</strong></p>
+</div>
 <div id="message">
 <%= @flash_mess %>
 </div>
