--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,46 +1,61 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>Twitter2mixi | TwitterしたらMixiエコーに自動送信!! </title>
-  <link href="/css/main.css" media="screen" rel="Stylesheet" type="text/css" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link href="css/style.css" media="all" rel="Stylesheet" type="text/css" />
 </head>
 
 <body>
-<%= session[:access_token] if @debug_flg %>
-<%= '<br>' if @debug_flg %>
-<%= session[:secret_token] if @debug_flg %>
-<div id="content">
-  <div id="header">
-    <div>
-      <h1><a href='/'>Twitter2Mixi</a> <font size=2 color='#a0a0a0'>ver alfa</font></h1>
-      <small>TwitterしたらMixiエコーに自動送信!!</small>
-    </div>
-    <br clear="all"/>
+<!-- Shell -->
+<div id="shell">
+  <a name="top"></a>
+  <a href='/'>
+    <img src='/images/twitter2mixi_logo_main.png' alt='Twitter2Mixi ver alfa'>
+  </a>
+  <div class="right">
+    TwitterしたらMixiボイスに自動送信!!
   </div>
-  
-  <div id="nav" style="float:right">
-    <p>
+
+  <div id="navigation">
+    <ul>
       <% if @login_flg %>
-          <a href='/signup'>Mixiアカウント設定</a>
-        | <a href='/unregist'>退会</a>
-        | <a href='/disconnect'>ログアウト</a>
+        <li><a href='/signup'><span>Mixiアカウント設定</span></a></li>
+        <div class="right">
+          <li><a href='/unregist'><span>退会</span></a></li>
+          <li><a href='/disconnect'><span>ログアウト</span></a></li>
+        </div>
       <% else %>
-          <a href='/connect'>ログイン(新規登録)</a>
+        <li><a href='/#whats'><span>twitter2mixiって？</span></a></li>
+        <li><a href='/connect'><span>新規登録</span></a></li>
+        <li><a href='/#faq'><span>よくある質問</span></a></li>
+        <li><a href='/#our'><span>運営者</span></a></li>
+        <li><a href='/#friend'><span>求人</span></a></li>
+        <div class="right">
+        <li><a href='/connect'><span>ログイン</span></a></li>
+        <li><a href='/#kiyaku'><span>利用規約</span></a></li>
       <% end %>
-    </p>
+    </ul>
   </div>
-  <br clear="all"/>
 
-  <%= yield %>
-
-  <div id="footer" align="center">
-    <br/>
-    <small>
-      copyright <a href='http://cyberwave.jp/nashiki/' target='_blank'>cyberwave.jp</a>
-    </small>
+  <div id="content">
+    <%= yield %>
   </div>
-  
 </div>
+<!-- End Shell -->
+
+<!-- Footer -->
+<div id="footer" align="center">
+  <small>
+    &copy; <a href='http://cyberwave.jp/nashiki/' target='_blank'>cyberwave.jp</a><br/>
+    original template from <a href='http://chocotemplates.com/' target='_blank'>chocotemplates.com</a><br>
+  <%= session[:access_token] if @debug_flg %>
+  <%= '<br>' if @debug_flg %>
+  <%= session[:secret_token] if @debug_flg %>
+  </small>
+</div>
+<!-- End Footer -->
+
 <%= partial :googleanalytics %>
 </body>
 </html>
