front renew about finish

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>Twitter2mixi | TwitterしたらMixiエコーに自動送信!! </title>
-  <link href="css/style.css" media="all" rel="Stylesheet" type="text/css" />
+  <link href="/css/style.css" media="all" rel="Stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -26,10 +26,15 @@
   <div id="navigation">
     <ul>
       <% if @login_flg %>
-        <li><a href='/signup'><span>Mixiアカウント設定</span></a></li>
+        <li><a href='/member/setting'<%= "class='active'" if @path == '/member/setting' %>><span>設定全般</span></a></li>
+<% if @user_dao.active_flg %>
+<% @webservices.each { |webservice| %>
+        <li><a href='/member/setting/<%= webservice['name'] %>'<%= "class='active'" if @path == "/member/setting/#{webservice['name']}" %>><span><%= webservice['ja'] %></span></a></li>
+<% } %>
+<% end %>
         <div class="right">
-          <li><a href='/unregist'><span>退会</span></a></li>
-          <li><a href='/disconnect'><span>ログアウト</span></a></li>
+          <li><a href='/member/unregist'><span>退会</span></a></li>
+          <li><a href='/member/logout'><span>ログアウト</span></a></li>
         </div>
       <% else %>
         <li><a href='/#whats'><span>twitter2mixiって？</span></a></li>
@@ -62,6 +67,6 @@
 </div>
 <!-- End Footer -->
 
-<%= partial :googleanalytics %>
+<%= partial :_googleanalytics %>
 </body>
 </html>
