--- a/views/_ad.erb
+++ b/views/_ad.erb
@@ -38,6 +38,6 @@
   <a href='http://www.0r2.info/blog/' target='_blank'>masayun</a> on <a href="http://twitter.com/masayukig" target='_blank'>twitter</a><br>
   <br>
   <h5>デザイナ</h5>
-  fukurow on <a href="http://twitter.com/fukurow" target='_blank'>twitter</a><br>
+  <a href='http://www.hatena.ne.jp/fukurow57/' target='_blank'>fukurow</a> on <a href="http://twitter.com/fukurow" target='_blank'>twitter</a><br>
   <div align='right'><a href='#top'>TOPへ戻る</a></div>
 </p>
