--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title>Twitter2mixi | TwitterしたらMixiエコーに自動送信!! </title>
+  <title>Twitter2mixi | Twitterしたらmixiボイスに自動送信!! </title>
   <link href="/css/style.css" media="all" rel="Stylesheet" type="text/css" />
 </head>
 
