--- a/views/home.erb
+++ b/views/home.erb
@@ -3,7 +3,7 @@
   お手軽登録！<h1>あなたのTwitterをMixiエコーに自動送信します。(無料)<br></h1>
   </div>
   <br>
-  <a href="/connect"><img src='/images/twitter_allow.jpg' width='500'></a><br>
+  <a href="/connect"><img src='/images/twitter_allow.jpg' width='500' border=0></a><br>
   <br>
   あなたの、Twitterで、「Allow」のボタンをクリックして下さい。<br>
 </center>
